--- a/charts/argo-workflows/templates/controller/workflow-controller-crb.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-crb.yaml
@@ -1,45 +1,51 @@
 {{- if .Values.controller.rbac.create }}
+{{- $context := merge (dict "controller" $.Values.controller) . }}
+{{- $namespaces := keys (.Values.controllers | default (dict (include "argo-workflows.namespace" .) .Values.controller)) }}
 apiVersion: rbac.authorization.k8s.io/v1
-{{- if .Values.singleNamespace }}
+{{- if and .Values.singleNamespace (eq (len .Values.controllers) 0) }}
 kind: RoleBinding
 {{ else }}
 kind: ClusterRoleBinding
 {{- end }}
 metadata:
-  name: {{ template "argo-workflows.controller.fullname" . }}
-  {{- if .Values.singleNamespace }}
+  name: {{ template "argo-workflows.controller.fullname" $context }}
+  {{- if and .Values.singleNamespace (eq (len .Values.controllers) 0) }}
   namespace: {{ include "argo-workflows.namespace" . | quote }}
   {{- end }}
   labels:
-    {{- include "argo-workflows.labels" (dict "context" . "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
+    {{- include "argo-workflows.labels" (dict "context" $context "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  {{- if .Values.singleNamespace }}
+  {{- if and .Values.singleNamespace (eq (len .Values.controllers) 0) }}
   kind: Role
   {{ else }}
   kind: ClusterRole
   {{- end }}
-  name: {{ template "argo-workflows.controller.fullname" . }}
+  name: {{ template "argo-workflows.controller.fullname" $context }}
 subjects:
+  {{ range $ns := $namespaces -}}
   - kind: ServiceAccount
-    name: {{ template "argo-workflows.controllerServiceAccountName" . }}
-    namespace: {{ include "argo-workflows.namespace" . | quote }}
+    name: {{ template "argo-workflows.controllerServiceAccountName" $context }}
+    namespace: {{ $ns | quote }}
+  {{ end }}
 
 {{- if .Values.controller.clusterWorkflowTemplates.enabled }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ template "argo-workflows.controller.fullname" . }}-cluster-template
+  name: {{ template "argo-workflows.controller.fullname" $context }}-cluster-template
   labels:
-    {{- include "argo-workflows.labels" (dict "context" . "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
+    {{- include "argo-workflows.labels" (dict "context" $context "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "argo-workflows.controller.fullname" . }}-cluster-template
+  name: {{ template "argo-workflows.controller.fullname" $context }}-cluster-template
 subjects:
+  {{ range $ns := $namespaces -}}
   - kind: ServiceAccount
-    name: {{ template "argo-workflows.controllerServiceAccountName" . }}
-    namespace: {{ include "argo-workflows.namespace" . | quote }}
+    name: {{ template "argo-workflows.controllerServiceAccountName" $context }}
+    namespace: {{ $ns | quote }}
+  {{ end }}
 {{- end }}
 {{- end }}
