--- a/charts/argo-workflows/templates/controller/workflow-role.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-role.yaml
@@ -1,5 +1,11 @@
 {{- if .Values.workflow.rbac.create -}}
-  {{- range $namespace := or .Values.singleNamespace false | ternary (list "") (append .Values.controller.workflowNamespaces (coalesce .Values.workflow.namespace (include "argo-workflows.namespace" .)) | uniq)  }}
+{{- $controllers := .Values.controllers | default (dict (include "argo-workflows.namespace" .) .Values.controller) }}
+{{- $workflowNamespaces := default list }}
+{{- range $config := values $controllers }}
+{{- $controller := deepCopy $.Values.controller | merge $config }}
+{{- $workflowNamespaces = concat $workflowNamespaces $controller.workflowNamespaces }}
+{{- end }}
+{{- range $ns := $workflowNamespaces }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -7,7 +13,7 @@ metadata:
   name: {{ template "argo-workflows.fullname" $ }}-workflow
   labels:
     {{- include "argo-workflows.labels" (dict "context" $ "component" $.Values.controller.name "name" $.Values.controller.name) | nindent 4 }}
-    {{- with $namespace }}
+    {{- with $ns }}
   namespace: {{ . }}
     {{- end }}
 rules:
